--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,4 @@
 {
     "python.linting.enabled": true,
-    "python.linting.pylintEnabled": true,
-    "python.linting.banditEnabled": false,
-    "python.linting.flake8Enabled": false
+    "python.linting.pylintEnabled": false,
 }
